[package]
name = "fishfinder"
version = "0.1.0"
authors = ["Billy Lindeman <billylindeman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adsb = { git = "https://github.com/asmarques/adsb"}
failure = "0.1.8"
pretty_env_logger = "0.4.0"
rtlsdr_mt = "2.1.0"
structopt = "0.3.21"


[[bin]]
name = "fishfinder"
path = "./bin/fishfinder.rs"
