[package]
name = "fishfinder"
version = "0.1.0"
authors = ["Billy Lindeman <billylindeman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adsb = { git = "https://github.com/asmarques/adsb"}
crossbeam = "0.8.0"
crossbeam-channel = "0.5.1"
crossbeam-utils = "0.8.3"
failure = "0.1.8"
hex = "0.4.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
ringbuf = "0.2.3"
rtlsdr_mt = "2.1.0"
structopt = "0.3.21"
tokio = { version = "1.4.0", features = ["full", "tracing"] }
tokio-util = { version = "0.6.6", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
pin-utils = "0.1.0"
bytes = "1.0.1"
binwrite = "0.2.1"
crc16 = "0.4.0"
bitfield = "0.13.2"
futures = "0.3.14"


[[bin]]
name = "fishfinder"
path = "./bin/fishfinder.rs"

[[bin]]
name = "foreflight-discover"
path = "./bin/foreflight-discover.rs"
